--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!doctype html>
-<meta http-equiv="refresh" content="0; url=./dist/webpjs/"/>
+<meta http-equiv="refresh" content="0; url=./libwebpjs/dist/"/>
