decoder demo works

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <!doctype html>
-<meta http-equiv="refresh" content="0; url=./libwebpjs/dist/"/>
+<html>
+	<head>
+		<title>webp-hero</title>
+	</head>
+	<body>
+		<h1>webp-hero</h1>
+		<canvas></canvas>
+		<p></p>
+		<script src="dist/dwebp.js"></script>
+		<script src="source/webp-polyfill.js"></script>
+	</body>
+</html>
