refactor dwebp.js and add webp-hero polyfill script

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	</head>
 	<body>
 		<h1>webp-hero</h1>
-		<canvas></canvas>
-		<p></p>
-		<script src="dist/dwebp.js"></script>
-		<script src="source/webp-polyfill.js"></script>
+		<img alt="" src="images/dice.webp"/>
+		<img alt="" src="images/landscape.webp"/>
+		<img alt="" src="images/firebreather.webp"/>
+		<!-- <script src="dist/dwebp.js"></script> -->
+		<script src="dist/webp-hero.global.bundle.js"></script>
 	</body>
 </html>
