--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 		<title>webp-hero</title>
 	</head>
 	<body>
+
 		<h1>webp-hero</h1>
+		<p>view source on <a href="https://github.com/chase-moskal/webp-hero">github</a></p>
 		<img alt="" src="images/dice.webp"/>
 		<img alt="" src="images/landscape.webp"/>
 		<img alt="" src="images/firebreather.webp"/>
-		<!-- <script src="dist/dwebp.js"></script> -->
-		<script src="dist/webp-hero.global.bundle.js"></script>
+
+		<script src="dist/webp-hero.polyfill.bundle.js"></script>
 	</body>
 </html>
