remove default exports, rename bundle

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!doctype html>
 <html>
 	<head>
+		<meta charset="utf-8"/>
 		<title>webp-hero</title>
 	</head>
 	<body>
-
 		<h1>webp-hero</h1>
 		<p>view source on <a href="https://github.com/chase-moskal/webp-hero">github</a></p>
 		<img alt="" src="images/dice.webp"/>
 		<img alt="" src="images/landscape.webp"/>
 		<img alt="" src="images/firebreather.webp"/>
 
-		<script src="dist/webp-hero.polyfill.bundle.js"></script>
+		<script src="dist/webp-hero.bundle.js"></script>
+		<script>
+			// you can add "?force" to the url to force webp conversion
+			const force = location.search.includes("force")
+
+			const webpHero = new WebpHero()
+			webpHero.polyfill({force})
+		</script>
 	</body>
 </html>
