--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 		<img alt="" src="images/landscape.webp"/>
 		<img alt="" src="images/firebreather.webp"/>
 
+		<script src="dist/polyfills.js"></script>
 		<script src="dist/webp-hero.bundle.js"></script>
 		<script>
 
 			// for this demo, you can add "?force" to the url to force webp conversion
-			const webpSupport = location.search.includes("force")
+			var webpSupport = location.search.indexOf("force") !== -1
 				? Promise.resolve(false)
 				: undefined
-			
+
 			// instance the webp machine
-			const webpMachine = new webpHero.WebpMachine({webpSupport})
+			var webpMachine = new webpHero.WebpMachine({webpSupport: webpSupport})
 
 			// polyfill this entire document's webp images
 			webpMachine.polyfillDocument()
