add: useCanvasElements option to WebpMachine
the new option allows webp-hero to replace image elements
with canvas elements, instead of replacing the src with png data urls.

this was implemented to get webp-hero working in icecat 60.7, where
the `canvas.toDataURL` function doesn't seem to be working,
probably because of an anti-fingerprinting measure.

 - close #43

--- a/index.html
+++ b/index.html
@@ -14,13 +14,23 @@
 		<script src="dist-cjs/polyfills.js"></script>
 		<script src="dist-cjs/webp-hero.bundle.js"></script>
 		<script>
+
 			// for this demo, you can add "?force" to the url to force webp conversion
 			var webpSupport = location.search.indexOf("force") !== -1
 				? Promise.resolve(false)
 				: undefined
 
+			// you can also add "?useCanvasElements" to the url
+			// to replace img elements with canvases
+			var useCanvasElements = location.search.indexOf("useCanvasElements") !== -1
+				? true
+				: false
+
 			// instance the webp machine
-			var webpMachine = new webpHero.WebpMachine({webpSupport: webpSupport})
+			var webpMachine = new webpHero.WebpMachine({
+				webpSupport: webpSupport,
+				useCanvasElements: useCanvasElements,
+			})
 
 			// polyfill this entire document's webp images
 			webpMachine.polyfillDocument()
