--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>webp-hero</title>
+		<style>
+			html {
+				background: #222;
+				color: #aaa;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>webp-hero</h1>
