add: useful links to demo page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 				background: #222;
 				color: #aaa;
 			}
+			p { margin: 0 1em; }
+			a { color: #fa4; }
 		</style>
 	</head>
 	<body>
 		<h1>webp-hero</h1>
-		<p>view source on <a href="https://github.com/chase-moskal/webp-hero">github</a></p>
+		<p><a href="https://github.com/chase-moskal/webp-hero">webp-hero github</a></p>
+		<p><a href="/libwebp/dist/google/index.html">google's webp demo</a></p>
+		<p><a href=".">.</a> standard webp usage</p>
+		<p><a href="./?force">?force</a> force webp decoding</p>
+		<p><a href="./?force?useCanvasElements">?force?useCanvasElements</a> replace images with canvases</p>
+
 		<img alt="" src="images/dice.webp"/>
 		<img alt="" src="images/landscape.webp"/>
 		<img alt="" src="images/firebreather.webp"/>
